Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* Add new bic file
* Allow to search on both compact and non-compact number

Version 1.2 - 2014-07-01
* Changelog file creation