@@ -1,3 +1,4 @@
+* Check if the bank account is used on anything before breaking link between party and bank account
 Version 1.6 - 2015-12-23
 
 Version 1.4 - 2015-05-29
